# adventofcode

./: .gitignore  .gitmodules  CMakeLists.txt  JOURNAL.md  README.md  TODO.md  get-inputs.sh
2023/: 1-1.c  1-2.c
day01/: CMakeLists.txt  p1.c  p2.c
day02/: 2-1.c  2-2.c  p1.c  p2.c
day03/: p1.c  p2.c
day04/: 4-1.cpp  p1.c  p2.c
day06/: p1.c  p2.c
day07/: p1.c  p2.c
day08/: p1.c  p2.c
day1/: 1-1.c  1-2.c
day10/: CMakeLists.txt  bonus.c  p1.c  p2.c  partall.c
day4/: 4-2.cpp
src/: 1-1.c  1-2.c  2-1.c  2-2.c
